--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,5 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
-  padding: 16px 0 64px 0;
+  width: 100%;
 }
